# applied-nlp-engine

./: README.md
api/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/core/: distancia_coseno.py  distancia_coseno_with_dataset.py  jaccard.py  jaccard_with_dataset.py
api/routes/: algoritmos.py  route_algorithm_with_dataset.py
api/schemas/: data_models.py
client/: package.json  pnpm-lock.yaml
client/src/app/: layout.tsx  page.tsx
client/src/app/dendrograma/: page.tsx
client/src/app/lexicalmatcher/: page.tsx
client/src/components/: Footer.tsx  Navbar.tsx
